add_subdirectory(unit_tests)


##  UNIT TEST SOURCES ###
set (UNIT_TEST_SRCS ${UNIT_TEST_SRCS} PARENT_SCOPE)
set (UNIT_TEST_HEADERS ${UNIT_TEST_HEADERS} PARENT_SCOPE)
set (UNIT_TEST_HEADERS_WPATH ${UNIT_TEST_HEADERS_WPATH} PARENT_SCOPE)
#######################

## UNIT TEST MAIN ##
set (UNIT_TEST_MAIN ${UNIT_TEST_MAIN} PARENT_SCOPE)
#####################

set (TEST_INCLUDE_DIRS ${TEST_INCLUDE_DIRS} PARENT_SCOPE)

